--- a/src/App.css
+++ b/src/App.css
@@ -170,6 +170,8 @@ ul{
 .special{
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 .special-dishes-content{
   display: flex;
@@ -185,9 +187,13 @@ ul{
   align-content: flex-start;
   padding: 20px;
   gap: 10px;
+  /* overflow: scroll; */
+  max-width: 1000px;
+  max-height: 100vh;
+
 }
 .item{
-  flex: 1 1 250px;
+  max-width: 150px;
 }
 
 .item-image  {
@@ -206,7 +212,7 @@ ul{
   align-content: flex-start;
   justify-content: space-evenly;
   gap: 10px;
-  border: 5px solid black;
+  border: 1px solid rgb(202, 201, 201);
   padding: 5px;
   margin-left: 5px;
 border-radius: 10px;
@@ -259,4 +265,74 @@ border-radius: 10px;
 .category-buttons button:hover{
   background-color: orange;
   transform: scale(0.8);
+}
+
+
+.global_category{
+
+ display: flex;
+    align-items: center;
+    flex-direction: column;
+    margin-bottom: 20px;
+
+}
+.global_category_buttons{
+  display: flex;
+    justify-content: center;
+    gap: 20px;
+    margin-top: 20px;
+    flex-wrap: wrap;
+    width: 500px;
+    align-items: center;
+}
+.notActive{
+  height: 30px;
+  padding: 5px;
+  background-color: rgb(210, 186, 30);
+  border-radius: 10px;
+  transition: 0.6s;
+}
+.notActive:hover{
+  background-color: rgb(0, 0, 0);
+  color: white;
+}
+.isActive{
+  height: 30px;
+  padding: 5px;
+  background-color: rgb(10, 10, 9);
+  border-radius: 10px;
+ color: white;
+
+}
+.global_category_display{
+  display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    gap: 10px;
+    margin-top: 10px;
+    max-width: 800px;
+
+}
+.global_category_item{
+  width: 100%;
+    max-width: 100px;
+}
+.global_category_item img{
+  width: 100%;
+  border-radius: 10px;
+}
+
+.alertbox{
+  width: 250px;
+  height: 100px;
+  border: 1px solid red;
+  text-align: center;
+}
+.alertbox p{
+  margin: auto;
+}
+.pagination{
+  display: flex;
+  gap: 10px;
+
 }
