--- a/src/App.css
+++ b/src/App.css
@@ -320,6 +320,7 @@ border-radius: 10px;
 .global_category_item img{
   width: 100%;
   border-radius: 10px;
+  cursor: pointer;
 }
 
 .alertbox{
@@ -334,5 +335,77 @@ border-radius: 10px;
 .pagination{
   display: flex;
   gap: 10px;
+
+}
+
+
+/* popup section */
+
+.popup{
+  display: flex;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    z-index: 999;
+    background-color: rgba(0, 0, 0, 0.5);
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    transition: opacity 0.6s;
+  
+}
+.popup .popup_content{
+  color: white;
+  display: flex;
+  align-items: center;
+  width: 750px;
+  height: 500px;
+  background-color: #b1bfd8;
+  background-image: linear-gradient(315deg, #b1bfd8 0%, #6782b4 74%);
+  border-radius: 5px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  position: relative;
+  opacity: 1;
+  padding: 10px;
+}
+ 
+.popup .popup_content h1{
+  color: white;
+}
+
+.popup .popup_content .closingbtn{
+  position: absolute;
+  top: 0;
+  right: 0;
+  transform: translate(-15px, 10px);
+}
+
+.item-details-left{
+  width: 45%;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  background-color: #89d4cf;
+  background-image: linear-gradient(315deg, #89d4cf 0%, #6e45e1 74%);
+  height: 95%;
+  /* justify-content: center; */
+  align-items: center;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+
+  font-family: cursive;
+}
+.item-image-side{
+  margin-top: 5px;
+  max-width: 324px;
+  width: 100%;
+   
+
+}
+.item-image-side img{
+  width: 100%;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 
 }
